Fix the colors in the dark mode on the transactions page

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -1743,12 +1743,31 @@ body {
   justify-content: center;
 }
 
+.\*\:rounded-md > * {
+  border-radius: 0.375rem;
+}
+
 .\*\:border > * {
   border-width: 1px;
 }
 
 .\*\:border-b > * {
   border-bottom-width: 1px;
+}
+
+.\*\:py-4 > * {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.\*\:px-2 > * {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.\*\:py-1 > * {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .\*\:pb-2 > * {
@@ -2031,6 +2050,11 @@ body {
 .dark\:text-zinc-300:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(212 212 216 / var(--tw-text-opacity));
+}
+
+.\*\:dark\:border-gray-800:is(.dark *) > * {
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity));
 }
 
 .\*\:dark\:border-b-gray-400:is(.dark *) > * {
